<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >
<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >



    <TextView

        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introText"
        android:textSize="@dimen/sizeintroText"
        android:textColor="@color/white"/>

    <TextView

        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introSubText"
        android:textSize="@dimen/textsubText"
        android:textColor="@color/white"/>


    <TextView

        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introSubTextcompany"
        android:textSize="@dimen/textsubTextcompany"
        android:textColor="@color/white"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />
</LinearLayout>

</RelativeLayout>